<resources>
    <string name="app_name">ProyectoFinal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_crear">Crear</string>
    <string name="action_editar">Editar</string>
    <string name="action_borrar">Borrar</string>
    <string name="action_listar">Listar</string>


    <!-- Notas -->
    <string name="hello_blank_fragment">Crear Nota</string>
    <string name="view_name_input">Escribe el nombre del archivo</string>
    <string name="view_content_input">Escribe el contenido de la nota</string>
    <string name="view_id_input">Escribe el id del archivo</string>
    <string name="btn_crear">Crear</string>
    <string name="btn_abrir">Abrir</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_borrar">Borrar</string>

    <string name="btn_editar">Editar</string>


    <!-- Base de datos -->
    <string name="confirmation_message">Confirmación del pedido:</string>
    <string name="str_nombre">Nombre: </string>
    <string name="message">"Gracias por elegir esta computadora.\nPrecio base: $10,000"</string>
    <string name="processor_message">Selecciona una opcion de procesador:</string>
    <string name="opcion1_1">Intel® Core™ i3 (incluido en el precio base)</string>
    <string name="opcion1_2">Intel® Core™ i5 ($5,000)</string>
    <string name="opcion1_3">Intel® Core™ i7 ($7,000)</string>
    <string name="storage_message">Selecciona una opcion de almacenamiento:</string>
    <string name="opcion2_1">120 GB (incluido en el precio base)</string>
    <string name="opcion2_2">512 GB ($7,500)</string>
    <string name="opcion2_3">1 TB ($10,000)</string>
    <string name="accessories_message">Selecciona accesorios adicionales:</string>
    <string name="str_cargador">Cargador extra ($1,000)</string>
    <string name="str_audifonos">Audifonos ($600)</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Cancelar">Cancelar</string>


</resources>
