<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_crear"
        android:orderInCategory="100"
        android:title="@string/action_crear"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_editar"
        android:orderInCategory="100"
        android:title="@string/action_editar"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_borrar"
        android:orderInCategory="100"
        android:title="@string/action_borrar"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_listar"
        android:orderInCategory="100"
        android:title="@string/action_listar"
        app:showAsAction="never" />
</menu>
